# archive

rocket_backend/: Architecture.toml  Cargo.toml  brute_curl.sh  postrequest.sh
rocket_backend/src/: main.rs
rocket_backend/src/libs/: config_parse.rs  config_structs.rs  mod.rs  mongodb.rs  unique_string.rs
rocket_backend/src/libs/validators/: long_link.rs  mod.rs  short_link.rs
rocket_backend/src/models/: links.rs
rocket_backend/src/routes/: link_route.rs  mod.rs  redirects.rs  root_route.rs
rocket_backend/templates/layouts/: default.html.hbs
rocket_backend/templates/pages/: link_create.html.hbs  welcome.html.hbs
rocket_backend/templates/partials/: head.default.html.hbs
