[package]
name = "plrocket_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.188"}

rocket = {version = "0.5.0-rc.3", features = ["json", ]}
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"]}
rocket_db_pools = { version = "0.1.0-rc.3", features = ["mongodb"]}
rand = "0.8.5"
